Fix: jumping password field placeholder (#328)

--- a/src/containers/Profile/Profile.pcss
+++ b/src/containers/Profile/Profile.pcss
@@ -363,10 +363,6 @@
         height: calc(var(--gap) * 8.16);
         margin-top: calc(var(--gap) * 3.6);
         width: 100%;
-
-        &:focus-within {
-          padding-top: calc(var(--gap) * 0.66);
-        }
       }
 
       .group-content {
